--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "vite-react-typescript-starter",
+  "name": "tabldot-catering",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
+  "license": "MIT",
+  "author": "Mutlu Kurt",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
