--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,7 +10,7 @@
   "theme_color": "#ea580c",
   "icons": [
     {
-      "src": "/vite.svg",
+      "src": "/icon.svg",
       "sizes": "any",
       "type": "image/svg+xml",
       "purpose": "any maskable"
